--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "math-ln": "^1.0.0",
     "rxjs": "^6.0.0",
+    "typescript-require": "^0.2.10",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
